--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Local Chat RAG</title>
+    <title>Local RAG</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
   <body>
